--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1440047379</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:11</td>   <td>8384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.pageTitle()[pri:1, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">pageTitle</td> 
-  <td>main@1440047379</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:11</td>   <td>8890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1440047379</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:12</td>   <td>9543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1440047379</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:20</td>   <td>17112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.clickRoundTrip()[pri:2, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">clickRoundTrip</td> 
-  <td>main@1440047379</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>19/02/18 10:20:20</td>   <td>17114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@66a3ffec]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1440047379</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:50:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:50:40</td>   <td>13641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.VerifyLogo()[pri:1, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">VerifyLogo</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:02</td>   <td>35598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:03</td>   <td>36405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:14</td>   <td>48221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.pageTitle()[pri:2, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">pageTitle</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:15</td>   <td>49184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:16</td>   <td>49900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:28</td>   <td>62034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.clickRoundTrip()[pri:3, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">clickRoundTrip</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:28</td>   <td>62268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:29</td>   <td>62983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:42</td>   <td>75652</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.verifySign()[pri:4, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">verifySign</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="a181e2">  <td>19/02/18 15:51:42</td>   <td>75887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@611889f4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
 </table>
