--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\savan\AppData\Local\Temp\testng-eclipse-1494488974\testng-customsuite.xml</span>
+                    <span>C:\Users\savan\AppData\Local\Temp\testng-eclipse-1748152952\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.cleartrip.qa.testcases.SearchFlight_RoundTrip" class="method navigator-link" hash-for-method="VerifyLogo">VerifyLogo</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.cleartrip.qa.testcases.SearchFlight_RoundTrip" class="method navigator-link" hash-for-method="clickRoundTrip">clickRoundTrip</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.cleartrip.qa.testcases.SearchFlight_RoundTrip" class="method navigator-link" hash-for-method="pageTitle">pageTitle</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.cleartrip.qa.testcases.SearchFlight_RoundTrip" class="method navigator-link" hash-for-method="verifySign">verifySign</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.cleartrip.qa.testcases.LoginTest" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,35 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.cleartrip.qa.testcases.SearchFlight_RoundTrip</span>
+              <span class="class-name">com.cleartrip.qa.testcases.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyLogo">
-                  </a> <!-- VerifyLogo -->
-                  <span class="method-name">VerifyLogo</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="clickRoundTrip">
-                  </a> <!-- clickRoundTrip -->
-                  <span class="method-name">clickRoundTrip</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="pageTitle">
-                  </a> <!-- pageTitle -->
-                  <span class="method-name">pageTitle</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifySign">
-                  </a> <!-- verifySign -->
-                  <span class="method-name">verifySign</span>
+                  <a name="Login">
+                  </a> <!-- Login -->
+                  <span class="method-name">Login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\savan\AppData\Local\Temp\testng-eclipse-1494488974\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\savan\AppData\Local\Temp\testng-eclipse-1748152952\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.cleartrip.qa.testcases.SearchFlight_RoundTrip&quot;/&gt;
+      &lt;class name=&quot;com.cleartrip.qa.testcases.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyLogo')
-data.setCell(0, 2, 'com.cleartrip.qa.testcases.SearchFlight_RoundTrip')
-data.setCell(0, 3, 21941);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'pageTitle')
-data.setCell(1, 2, 'com.cleartrip.qa.testcases.SearchFlight_RoundTrip')
-data.setCell(1, 3, 952);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifySign')
-data.setCell(2, 2, 'com.cleartrip.qa.testcases.SearchFlight_RoundTrip')
-data.setCell(2, 3, 227);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'clickRoundTrip')
-data.setCell(3, 2, 'com.cleartrip.qa.testcases.SearchFlight_RoundTrip')
-data.setCell(3, 3, 220);
+data.setCell(0, 1, 'Login')
+data.setCell(0, 2, 'com.cleartrip.qa.testcases.LoginTest')
+data.setCell(0, 3, 4398);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,54 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.cleartrip.qa.testcases.SearchFlight_RoundTrip</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.cleartrip.qa.testcases.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">VerifyLogo</span>
-                <span class="method-start">13643 ms</span>
+                <span class="method-name">Login</span>
+                <span class="method-start">15142 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">35599 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">36406 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">pageTitle</span>
-                <span class="method-start">48223 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">49184 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">49901 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">clickRoundTrip</span>
-                <span class="method-start">62036 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">62269 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">62982 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifySign</span>
-                <span class="method-start">75654 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">75888 ms</span>
+                <span class="method-start">19542 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
