--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a181e2">  <td>19/02/19 14:47:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@6283d8b8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="a181e2">  <td>19/02/19 14:47:50</td>   <td>15142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.cleartrip.qa.testcases.LoginTest@6283d8b8]">Login</td> 
-  <td>main@2108763062</td>   <td></td> </tr>
-<tr bgcolor="a181e2">  <td>19/02/19 14:47:54</td>   <td>19543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.teardown()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@6283d8b8]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2108763062</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/02/23 22:07:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/02/23 22:08:08</td>   <td>13882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:1, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">Login</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="69717b">  <td>19/02/23 22:08:22</td>   <td>28423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.teardown()[pri:0, instance:com.cleartrip.qa.testcases.LoginTest@3bfdc050]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:08:22</td>   <td>28424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:08:37</td>   <td>43160</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.VerifyLogo()[pri:1, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">VerifyLogo</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:08:52</td>   <td>57804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:08:53</td>   <td>58768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:00</td>   <td>66143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.pageTitle()[pri:2, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">pageTitle</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:00</td>   <td>66152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:01</td>   <td>67098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:09</td>   <td>75550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.clickRoundTrip()[pri:3, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">clickRoundTrip</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:09</td>   <td>75584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:10</td>   <td>76275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchFlight_RoundTrip.setUp()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:18</td>   <td>84203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchFlight_RoundTrip.verifySign()[pri:4, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">verifySign</td> 
+  <td>main@2114650936</td>   <td></td> </tr>
+<tr bgcolor="97c064">  <td>19/02/23 22:09:18</td>   <td>84209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchFlight_RoundTrip.teardown()[pri:0, instance:com.cleartrip.qa.testcases.SearchFlight_RoundTrip@1bce4f0a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2114650936</td>   <td></td> </tr>
 </table>
